[tool.poetry]
name = "new-releases"
version = "0.1.0"
description = "working on books.toscrape.com"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.4"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
